--- a/src/components/css/Card.css
+++ b/src/components/css/Card.css
@@ -1,15 +1,19 @@
 .Card {
   max-width: 264px;
   max-height: 336px;
-  background-color: rgb(255, 255, 255);
+  background-color: var(--navbarBackground);
   box-shadow: 0px 0px 7px 2px rgba(0, 0, 0, 0.03);
   border-radius: 5px;
   margin-bottom: 75px;
+  text-decoration: none;
 }
 
 .Card__flag img {
   height: 160px;
   width: 100%;
+  object-fit: cover;
+  vertical-align: top;
+  border-radius: 5px 5px 0 0;
 }
 
 .Card__data {
@@ -18,7 +22,7 @@
   font-weight: 700;
   font-size: 14px;
   line-height: 16px;
-  color: rgb(17, 21, 23);
+  color: var(--generalTextColor);
 }
 .Card__data p {
   margin: 8px 0;
