--- a/src/components/css/Card.css
+++ b/src/components/css/Card.css
@@ -1,6 +1,6 @@
 .Card {
-  max-width: 264px;
-  max-height: 336px;
+  width: 264px;
+  height: 336px;
   background-color: var(--navbarBackground);
   box-shadow: 0px 0px 7px 2px rgba(0, 0, 0, 0.03);
   border-radius: 5px;
