--- a/src/components/css/Filter.css
+++ b/src/components/css/Filter.css
@@ -58,3 +58,23 @@
   font-weight: 400;
   font-family: Nunito Sans;
 }
+
+@media screen and (max-width: 678px) {
+  .Filter {
+    display: block;
+    margin: 48px 16px;
+  }
+  .SearchFilter {
+    width: 100%;
+    margin-bottom: 40px;
+  }
+}
+@media screen and (min-width: 678px) and (max-width: 1024px) {
+  .Filter {
+    display: block;
+    margin: 48px 40px;
+  }
+  .SearchFilter {
+    margin-bottom: 40px;
+  }
+}
