--- a/src/components/css/Card.css
+++ b/src/components/css/Card.css
@@ -8,6 +8,15 @@
   text-decoration: none;
 }
 
+.Card:hover,
+.Card:focus {
+  box-shadow: 0px 0px 9px 2px rgba(0, 0, 0, 0.1);
+}
+.darkMode .Card:hover,
+.darkMode .Card:focus {
+  box-shadow: 0px 0px 7px 2px rgba(163, 163, 163, 0.1);
+}
+
 .Card__flag img {
   height: 160px;
   width: 100%;
@@ -19,7 +28,7 @@
 .Card__data {
   padding: 24px;
   font-family: Nunito Sans;
-  font-weight: 700;
+  font-weight: 600;
   font-size: 14px;
   line-height: 16px;
   color: var(--generalTextColor);
@@ -28,11 +37,11 @@
   margin: 8px 0;
 }
 .Card__data span {
-  font-weight: 600;
+  font-weight: 300;
 }
 
 .Card__data-name {
-  margin: 16px 0;
+  margin: 0 0 16px 0;
   font-weight: 700;
   font-size: 18px;
   line-height: 26px;
