--- a/src/components/css/Filter.css
+++ b/src/components/css/Filter.css
@@ -7,15 +7,26 @@
 /* Search Bar */
 .SearchFilter {
   display: flex;
+  position: relative;
   align-items: center;
-  padding: 0 0 0 2rem;
   background-color: var(--navbarBackground);
   width: 480px;
   box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.05);
   border-radius: 5px;
 }
 
+.SearchFilter:hover,
+.SearchFilter:focus {
+  box-shadow: 0px 2px 7px 0px rgba(0, 0, 0, 0.07);
+}
+.darkMode .SearchFilter:hover,
+.darkMode .SearchFilter:focus {
+  box-shadow: 0px 2px 5px 0px rgba(90, 90, 90, 0.07);
+}
+
 .SearchFilter__label {
+  position: absolute;
+  padding: 0 2rem 0 2rem;
   height: 18px;
 }
 
@@ -26,9 +37,8 @@
 .SearchFilter__input {
   height: 56px;
   width: 100%;
-  outline: none;
   border: none;
-  padding-left: 24px;
+  padding-left: 74px;
   background-color: var(--navbarBackground);
   color: var(--searchBarTextColor);
 }
@@ -43,12 +53,21 @@
 
 /* Filter by Regions */
 .CategoryFilter select {
+  width: 200px;
   padding: 18px 24px;
   box-shadow: 0px 2px 9px 0px rgba(0, 0, 0, 0.05);
   background-color: var(--navbarBackground);
   color: var(--searchBarTextColor);
   border: none;
   border-radius: 5px;
+}
+.CategoryFilter select:hover,
+.CategoryFilter select:focus {
+  box-shadow: 0px 2px 11px 0px rgba(0, 0, 0, 0.07);
+}
+.darkMode .CategoryFilter select:hover,
+.darkMode .CategoryFilter select:focus {
+  box-shadow: 0px 2px 9px 0px rgba(163, 163, 163, 0.07);
 }
 .CategoryFilter select option,
 .CategoryFilter select {
@@ -57,9 +76,10 @@
   font-size: 14px;
   font-weight: 400;
   font-family: Nunito Sans;
+  cursor: pointer;
 }
 
-@media screen and (max-width: 678px) {
+@media screen and (max-width: 660px) {
   .Filter {
     display: block;
     margin: 48px 16px;
@@ -69,7 +89,7 @@
     margin-bottom: 40px;
   }
 }
-@media screen and (min-width: 678px) and (max-width: 1024px) {
+@media screen and (min-width: 660px) and (max-width: 1024px) {
   .Filter {
     display: block;
     margin: 48px 40px;
