changed filter by region style

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,8 @@
   --background: rgb(250, 250, 250);
   --generalTextColor: rgb(17, 21, 23);
   --searchBarTextColor: rgb(132, 132, 132);
+  --chevron: black;
+  --regionFilterColor: rgb(132, 132, 132);
 }
 
 .darkMode {
@@ -10,6 +12,8 @@
   --background: rgb(32, 44, 54);
   --generalTextColor: rgb(255, 255, 255);
   --searchBarTextColor: rgb(255, 255, 255);
+  --chevron: white;
+  --regionFilterColor: rgb(235, 235, 235);
 }
 
 * {
@@ -19,6 +23,7 @@
 }
 html {
   overflow-y: overlay;
+  overflow-x: hidden;
 }
 
 body {
