--- a/src/components/css/NotFound.css
+++ b/src/components/css/NotFound.css
@@ -6,5 +6,5 @@
   font-family: Nunito Sans;
   font-weight: 700;
   font-size: 24px;
-  color: rgb(17, 21, 23);
+  color: var(--generalTextColor);
 }
