add space to cards

--- a/src/pages/css/Home.css
+++ b/src/pages/css/Home.css
@@ -3,7 +3,7 @@
   grid-template-columns: repeat(auto-fit, 264px);
   column-gap: 30px;
   row-gap: 75px;
-  margin: 0 80px;
+  margin: 0 80px 50px 80px;
   justify-content: space-between;
 }
 
